2009-03-02  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gvarbrowser.R (.inClass): put in secret interval argument for
	gvarbrowser to slow down polling

2009-01-31  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gvarbrowser.R (.inClass): fix to gvarbrowser to list
	knownTypes better using is(), added POSIXt to data types. How to get a list
	of these.

2008-12-15  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdialogs.R: added new feature with gbasicdialog

2008-12-09  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtext.R (.addTags): if inserting at end, moves scrollbar
	to bottomS

2008-12-08  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtext.R (.addTags): added insert method to replace
	overworked add
	(.addTags): move to end when adding if at end

2008-11-23  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdialogs.R: fixed return value of ginput

2008-11-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcalendar.R (lgedit): coerce with failed to be implemented

2008-11-18  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckboxgroup.R: More consistent defn of svalue<-

	* R/gaction.R: implemented svalue<-

2008-10-28  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtext.R (.addTags): fixed type calling keystroke handler

	* R/gdroplist.R: added width= argument through ... Should make
	this part of gcombobox API

	* R/gframe.R: fixed expand argument -- was always TRUE

2008-10-21  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggrid.R: fix to get gtable to work with CO2 data frame
	(coercion to data.frame, ordered factors)

2008-10-13  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtext.R (.addTags): fix to tags to get past strict type checking

2008-10-07  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckboxgroup.R: Fixed handler code in gcheckboxgroup to